--- a/Navbar/Aboutus/Staf.html
+++ b/Navbar/Aboutus/Staf.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sayed Meer Hamza</title>
 
-    <link rel="stylesheet" href="/Navbar/Aboutus/Staf.css">
+    <link rel="stylesheet" href="../Aboutus/Staf.css">
 
 </head>
 <body>
@@ -21,47 +21,47 @@
     <div class="carousel">
 
         <div class="list">
-            <div class="item" style="background-image: url(/Cimg/Arz\ Muhammad.png);">
+            <div class="item" style="background-image: url(../../Cimg/Arz\ Muhammad.png);">
                 <div class="content">
                     <div class="title">HR Manager</div>
                     <div class="name">Arz Muhammad</div>
                     <div class="des">Born in 1990, he is responsible for hiring security personnel for the company.</div>
                     <div class="btn">
-                        <a class="bact" href="/Navbar/Aboutus/Staf.html">More Infom</a>
+                        <a class="bact" href="../Aboutus/Staf.html">More Infom</a>
 
                     </div>
                 </div>
             </div>
-            <div class="item" style="background-image: url(/Cimg/MBux.png);">
+            <div class="item" style="background-image: url(../../Cimg/MBux.png);">
                 <div class="content">
                     <div class="title">Operation Manager</div>
                     <div class="name">Muhammad Bukhsh Narejo</div>
                     <div class="des">Muhammad Bux, born in 1977, enlisted in the army at the age of 18. His extensive training in militant tactics has equipped him with the expertise to provide his guards with the most rigorous training, ensuring their unwavering presence in the field.</div>
                     <div class="btn">
-                        <a class="bact" href="/Navbar/Aboutus/Staf.html">More Infom</a>
+                        <a class="bact" href="../Aboutus/Staf.html">More Infom</a>
                     </div>
                 </div>
             </div>
-            <div class="item" style="background-image: url(/Cimg/Manzoor.png);">
+            <div class="item" style="background-image: url(../../Cimg/Manzoor.png);">
                 <div class="content">
                     <div class="title">Operation Supervisor</div>
                     <div class="name">Sayed Manzoor Hussain Shah</div>
                     <div class="des">Born in 1976, Mr. Manzoor joined the Air Force in 1997. His responsibilities encompass managing locations, executing critical tasks, and maintaining seamless communication with clients.</div>
                     <div class="btn">
-                        <a class="bact" href="/Navbar/Aboutus/Staf.html">More Infom</a>
+                        <a class="bact" href="../Aboutus/Staf.html">More Infom</a>
 
 
                     </div>
                 </div>
             </div>
-            <div class="item" style="background-image: url(/Cimg/Saleem.png);">
+            <div class="item" style="background-image: url(../../Cimg/Saleem.png);">
                 <div class="content">
                     <div class="title">Senior Opertion Suprvisor</div>
                     <div class="name">LT-R Muhammad Saleem</div>
                     <div class="des">
                         Born in 1984, he joined FC in 1995. In this capacity, he is responsible for deploying guards to various locations and ensuring their continuous monitoring to optimize operational efficiency.</div>
                     <div class="btn">
-                        <a class="bact" href="/Navbar/Aboutus/Staf.html">More Infom</a>
+                        <a class="bact" href="../Aboutus/Staf.html">More Infom</a>
 
                     </div>
                 </div>
@@ -77,13 +77,13 @@
                     </div>
                 </div>
             </div> -->
-            <div class="item" style="background-image: url(/Cimg/Ferhan01.png);">
+            <div class="item" style="background-image: url(../../Cimg/Ferhan01.png);">
                 <div class="content">
                     <div class="title">Finance Manager</div>
                     <div class="name">Ferhan</div>
                     <div class="des">Born in 1977, he joined the military in 1989. He has honed his skills in money management and finance, serving as a financial and accounting professional.</div>
                     <div class="btn">
-                        <a class="bact" href="/Navbar/Aboutus/Staf.html">More Infom</a>
+                        <a class="bact" href="../Aboutus/Staf.html">More Infom</a>
 
                     </div>
                 </div>
@@ -104,5 +104,5 @@
 
     </div>
 
-<script type="module" src="/Navbar/Aboutus/Staf.js"></script></body>
+<script type="module" src="../Aboutus/Staf.js"></script></body>
 </html>
