--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <head>
     <meta charset="UTF-8">
     <title>Meer Security’s</title>
-    <link rel="stylesheet" href="./Buckit/Navbaar.css">
-       <link rel="stylesheet" href="/Css/Stategy.css">
-       <link rel="stylesheet" href="Home.css">
-       <link rel="stylesheet" href="./Navbar/navbar.css">
+    <link rel="stylesheet" href="./Css/Navbaar.css">
+       <link rel="stylesheet" href="./Css/Stategy.css">
+       <link rel="stylesheet" href="./Css/Home.css">
+       <link rel="stylesheet" href="./Css/navbar.css">
        <link rel="stylesheet" href="./Css/Slider.css">
        <link rel="stylesheet" href="./Css/Slides.css">
        <link rel="stylesheet" href="./Css/VideoCards.css">
@@ -70,7 +70,7 @@
             <a href="#">VACANCIES</a>
             <i class='bx bxs-chevron-down js-arrow arrow '></i>
             <ul class="js-sub-menu sub-menu">
-             <li><a href="/Navbar/Vacencies/Guard.html">Sec Guard</a></li>
+             <li><a href="./Navbar/Vacencies/Guard.html">Sec Guard</a></li>
                         <li><a href="./Navbar/Vacencies/BG.html" >Body G</a></li>
                         <li><a href="./Navbar/Vacencies/HRM.html" >HR Man</a></li>
                         <li><a href="./Navbar/Vacencies/OS.html" >Op Sup</a></li>
@@ -237,7 +237,7 @@
   </div>
 
   <div class="client-image">
-    <img src="/Cimg/Beretta 92FS.jpeg" alt="Security Guards" />
+    <img src="./Cimg/Beretta 92FS.jpeg" alt="Security Guards" />
   </div>
 </section>
 
@@ -263,13 +263,13 @@
     <div class="carousel-slide">
       <h2>Facts</h2>
       <p>MEER Security Services Pvt Ltd has over a decade of proven excellence in delivering customized security solutions to government and private sectors across Pakistan.</p>
-      <a href="/Properties/Facts.html">Explore Our Achievements</a>
+      <a href="./Properties/Facts.html">Explore Our Achievements</a>
     </div>
 
     <div class="carousel-slide">
       <h2>Vision</h2>
       <p>To become the most trusted and innovative security partner nationwide by consistently setting new standards in safety, reliability, and professionalism.</p>
-      <a href="/Properties/Purpose.html">See Our Future Goals</a>
+      <a href="./Properties/Purpose.html">See Our Future Goals</a>
     </div>
 
     <div class="carousel-slide">
@@ -338,7 +338,7 @@
         We leverage a team of retired military personnel, known for their discipline and expertise. Continuous training enhances
         performance and aligns with our organizational goals, fostering a skilled and adaptable workforce.
       </p>
-      <a href="/Navbar/Aboutus/Staf.html" class="btn-blue">See About Our Management</a>
+      <a href="./Navbar/Aboutus/Staf.html" class="btn-blue">See About Our Management</a>
     </div>
   </div>
 
@@ -835,14 +835,14 @@
       <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
       <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
 
-      <script type="module" src="Js/AllServices.js"></script>
-      <script type="module" src="Js/Headline.js"></script>
+      <script type="module" src="./Js/AllServices.js"></script>
+      <script type="module" src="./Js/Headline.js"></script>
   <script src="./js/Slides.js" defer></script>
   <script src="./js/google.js" defer></script>
 <!-- <script type="module" src="./Js/Slider.js"></script> -->
-<script type="module" src="./Count.js"></script>
-      <script src="Search.js"></script>
-  <script src="./Buckit/Navbaar.js"></script>
+<script type="module" src="./Js/Count.js"></script>
+      <script src="./Js/Search.js"></script>
+  <script src="./Js/Navbaar.js"></script>
 
 </body>
 </html>
