--- a/Navbar/Services/Allservices15.html
+++ b/Navbar/Services/Allservices15.html
@@ -147,11 +147,11 @@
         <div class="name">Instant & Reliable Communication</div>
         <div class="des">Stay connected with our high-quality walkie-talkie devices, ensuring smooth coordination for events, operations, and large premises security.</div>
         <div class="btn">
-            <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
-            <a class="bact01" href="../../Services/Guard-Ser.html">Next-Service</a>
+            <a class="bact" href="../Services/Booking/GuardBook.html">Book Now</a>
+            <a class="bact01" href="../Services/Guard-Ser.html">Next-Service</a>
             <br>
             <br>
-            <a class="bact02" href="../../Services/Walkie-Talkie.html">See-More</a>
+            <a class="bact02" href="../Services/Walkie-Talkie.html">See-More</a>
         </div>
     </div>
 </div>
