--- a/Navbar/Services/CCTV.html
+++ b/Navbar/Services/CCTV.html
@@ -5,25 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CCTV Installation & Monitoring</title>
 
-    <link rel="stylesheet" href="/Navbar/Services/Guard-Ser.css">
+    <link rel="stylesheet" href="../../Services/Guard-Ser.css">
 
 </head>
 <body>
     <header>
          <nav>
-            <a href="/index.html">Home</a>
-            <a href="/Navbar/Services/Allservices15.html">All Services</a>
-            <a href="/Navbar/Services/Guard-Ser.html">Guard</a>
-            <a href="/Navbar/Services/Boody-G.html" >Close-Prot</a>
-            <a href="/Navbar/Services/Scout.html">Scout</a>
-            <a href="/Navbar/Services/Vehicle.html">Vehicle</a>
-            <a href="/Navbar/Services/Sur-Watch.html">Sur-Watch</a>
-            <a href="/Navbar/Services/CCTV.html" class="active">CCTV</a>
-            <a href="/Navbar/Services/Walkie-Talkie.html">Walkie Talkie</a>
-            <a href="/Navbar/Services/Metal-Detector.html">Metal Detector</a>
-            <a href="/Navbar/Services/Access-Control.html">Access Control Gates</a>
-            <a href="/Navbar/Services/Fire-Safety.html">Fire Safety</a>
-            <a href="/Navbar/Services/GPS-Tracking.html">GPS Track</a>
+          <a href="../../index.html">Home</a>
+            <a href="../Services/Allservices15.html">All Services</a>
+            <a href="../Services/Guard-Ser.html">Guard</a>
+            <a href="../Services/Boody-G.html" >Close-Prot</a>
+            <a href="../Services/EventSecurity.html">Event-Sec</a>
+            <a href="../Services/Scout.html">Scout</a>
+            <a href="../Services/Vehicle.html">Vehicle</a>
+            <a href="../Services/Sur-Watch.html">Sur-Watch</a>
+            <a href="../Services/CCTV.html"  class="active">CCTV</a>
+            <a href="../Services/Walkie-Talkie.html">Walkie Talkie</a>
+            <a href="../Services/Metal-Detector.html">Metal Detector</a>
+            <a href="../Services/Access-Control.html">Access Control Gates</a>
+            <a href="../Services/Fire-Safety.html">Fire Safety</a>
+            <a href="../Services/GPS-Tracking.html" >GPS Track</a>
         </nav>  
     </header>
 
@@ -32,51 +33,51 @@
 
         <div class="list">
                 <!-- Slide 5 -->
-    <div class="item" style="background-image: url(/Clintsimgs/Control-Integration.png.jpeg);">
+    <div class="item" style="background-image: url(../../Clintsimgs/Control-Integration.png.jpeg);">
         <div class="content">
             <div class="title">Control Integration</div>
             <div class="name">Centralized Operation</div>
             <div class="des">Seamlessly connects CCTV systems with on-ground security operations.</div>
             <div class="btn">
-                <a class="bact" href="/Navbar/Services/Booking/GuardBook.html">Book Now</a>
-                <a href="/Navbar/Services/Walkie-Talkie.html">Next-Service</a>
+                <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
+                <a href="../../Services/Walkie-Talkie.html">Next-Service</a>
             </div>
         </div>
     </div>
         <!-- Slide 3 -->
-    <div class="item" style="background-image: url(/Clintsimgs/CCTV.jpeg);">
+    <div class="item" style="background-image: url(../../Clintsimgs/CCTV.jpeg);">
         <div class="content">
             <div class="title">CCTV Installation</div>
         <div class="name">Smart Security Solutions</div>
         <div class="des">Professional CCTV setup with HD cameras and remote monitoring access, enhancing workplace and home security effectively.</div>
         <div class="btn">
-                <a class="bact" href="/Navbar/Services/Booking/GuardBook.html">Book Now</a>
-                <a href="/Navbar/Services/Walkie-Talkie.html">Next-Service</a>
+                <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
+                <a href="../../Services/Walkie-Talkie.html">Next-Service</a>
             </div>
         </div>
     </div>
      <!-- Slide 1 -->
-    <div class="item" style="background-image: url(/Clintsimgs/cctv01.jpeg);">
+    <div class="item" style="background-image: url(../../Clintsimgs/cctv01.jpeg);">
         <div class="content">
             <div class="title">CCTV Monitoring</div>
             <div class="name">24/7 Visual Security</div>
             <div class="des">High-definition cameras ensuring non-stop property surveillance.</div>
             <div class="btn">
-                <a class="bact" href="/Navbar/Services/Booking/GuardBook.html">Book Now</a>
-                <a href="/Navbar/Services/Walkie-Talkie.html">Next-Service</a>
+                <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
+                <a href="../../Services/Walkie-Talkie.html">Next-Service</a>
             </div>
         </div>
     </div>
 
     <!-- Slide 2 -->
-    <div class="item" style="background-image: url(/Clintsimgs/CCTV02.jpeg);">
+    <div class="item" style="background-image: url(../../Clintsimgs/CCTV02.jpeg);">
         <div class="content">
             <div class="title">Night Vision Cameras</div>
             <div class="name">Advanced Infrared Tech</div>
             <div class="des">Crystal-clear vision, even in complete darkness, for maximum safety.</div>
             <div class="btn">
-                <a class="bact" href="/Navbar/Services/Booking/GuardBook.html">Book Now</a>
-                <a href="/Navbar/Services/Walkie-Talkie.html">Next-Service</a>
+                <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
+                <a href="../../Services/Walkie-Talkie.html">Next-Service</a>
             </div>
         </div>
     </div>
@@ -99,5 +100,5 @@
 
     </div>
 
-<script type="module" src="/Navbar/Services/Guard-Ser.js"></script></body>
+<script type="module" src="../../Services/Guard-Ser.js"></script></body>
 </html>
