--- a/Navbar/Services/EventSecurity.html
+++ b/Navbar/Services/EventSecurity.html
@@ -5,26 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Event-Security</title>
 
-    <link rel="stylesheet" href="/Navbar/Services/Guard-Ser.css">
+    <link rel="stylesheet" href="../../Services/Guard-Ser.css">
 
 </head>
 <body>
     <header>
         <nav>
-            <a href="/index.html">Home</a>
-            <a href="/Navbar/Services/Allservices15.html">All Services</a>
-            <a href="/Navbar/Services/Guard-Ser.html">Guard</a>
-            <a href="/Navbar/Services/Boody-G.html" >Close-Prot</a>
-            <a href="/Navbar/Services/EventSecurity.html" class="active">Event-Sec</a>
-            <a href="/Navbar/Services/Scout.html">Scout</a>
-            <a href="/Navbar/Services/Vehicle.html">Vehicle</a>
-            <a href="/Navbar/Services/Sur-Watch.html">Sur-Watch</a>
-            <a href="/Navbar/Services/CCTV.html">CCTV</a>
-            <a href="/Navbar/Services/Walkie-Talkie.html">Walkie Talkie</a>
-            <a href="/Navbar/Services/Metal-Detector.html">Metal Detector</a>
-            <a href="/Navbar/Services/Access-Control.html">Access Control Gates</a>
-            <a href="/Navbar/Services/Fire-Safety.html">Fire Safety</a>
-            <a href="/Navbar/Services/GPS-Tracking.html">GPS Track</a>
+            <a href="../../index.html">Home</a>
+            <a href="../Services/Allservices15.html">All Services</a>
+            <a href="../Services/Guard-Ser.html">Guard</a>
+            <a href="../Services/Boody-G.html" >Close-Prot</a>
+            <a href="../Services/EventSecurity.html"class="active" >Event-Sec</a>
+            <a href="../Services/Scout.html">Scout</a>
+            <a href="../Services/Vehicle.html">Vehicle</a>
+            <a href="../Services/Sur-Watch.html">Sur-Watch</a>
+            <a href="../Services/CCTV.html">CCTV</a>
+            <a href="../Services/Walkie-Talkie.html">Walkie Talkie</a>
+            <a href="../Services/Metal-Detector.html">Metal Detector</a>
+            <a href="../Services/Access-Control.html">Access Control Gates</a>
+            <a href="../Services/Fire-Safety.html">Fire Safety</a>
+            <a href="../Services/GPS-Tracking.html" >GPS Track</a>
         </nav>  
     </header>
 
@@ -33,7 +33,7 @@
 
         <div class="list">
 <!-- Slide 5: Concert & Festival Security -->
-<div class="item" style="background-image: url(/Clintsimgs/Concert01.png);">
+<div class="item" style="background-image: url(../../Clintsimgs/Concert01.png);">
     <div class="content">
         <div class="title">Concert & Festival Security</div>
         <div class="name">Large Crowd Management</div>
@@ -42,13 +42,13 @@
             Our team handles entry control, artist safety, and overall crowd management.
         </div>
         <div class="btn">
-            <a class="bact" href="/Navbar/Services/Booking/GuardBook.html">Book Now</a>
-            <a href="/Navbar/Services/Scout.html">Next-Service</a>
+            <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
+            <a href="../../Services/Scout.html">Next-Service</a>
         </div>
     </div>
 </div>
     <!-- Slide 1: House Event Security -->
-<div class="item" style="background-image: url(/Clintsimgs/eventsec.png);">
+<div class="item" style="background-image: url(../../Clintsimgs/eventsec.png);">
     <div class="content">
         <div class="title">House Event Security</div>
         <div class="name">Safe & Secure Gatherings</div>
@@ -57,14 +57,14 @@
             Our guards ensure safety, crowd control, and smooth operations.
         </div>
         <div class="btn">
-            <a class="bact" href="/Navbar/Services/Booking/GuardBook.html">Book Now</a>
-            <a href="/Navbar/Services/Scout.html">Next-Service</a>
+            <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
+            <a href="../../Services/Scout.html">Next-Service</a>
         </div>
     </div>
 </div>
 
 <!-- Slide 2: Wedding & Function Security -->
-<div class="item" style="background-image: url(/Clintsimgs/WedSec.jpeg);">
+<div class="item" style="background-image: url(../../Clintsimgs/WedSec.jpeg);">
     <div class="content">
         <div class="title">Wedding & Function Security</div>
         <div class="name">VIP Guest Protection</div>
@@ -73,14 +73,14 @@
             Our trained guards manage entry points, guest safety, and event protection.
         </div>
         <div class="btn">
-            <a class="bact" href="/Navbar/Services/Booking/GuardBook.html">Book Now</a>
-            <a href="/Navbar/Services/Scout.html">Next-Service</a>
+            <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
+            <a href="../../Services/Scout.html">Next-Service</a>
         </div>
     </div>
 </div>
 
 <!-- Slide 3: Sports Event Security -->
-<div class="item" style="background-image: url(/Clintsimgs/SportSec.jpeg);">
+<div class="item" style="background-image: url(../../Clintsimgs/SportSec.jpeg);">
     <div class="content">
         <div class="title">Sports Event Security</div>
         <div class="name">Crowd & Player Safety</div>
@@ -89,14 +89,14 @@
             Our expert team manages crowd control, VIP zones, and ensures players' safety.
         </div>
         <div class="btn">
-            <a class="bact" href="/Navbar/Services/Booking/GuardBook.html">Book Now</a>
-            <a href="/Navbar/Services/Scout.html">Next-Service</a>
+            <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
+            <a href="../../Services/Scout.html">Next-Service</a>
         </div>
     </div>
 </div>
 
 <!-- Slide 4: Corporate Event Security -->
-<div class="item" style="background-image: url(/Clintsimgs/Corp.png);">
+<div class="item" style="background-image: url(../../Clintsimgs/Corp.png);">
     <div class="content">
         <div class="title">Corporate Event Security</div>
         <div class="name">Professional Protection</div>
@@ -105,8 +105,8 @@
             highly trained guards, ensuring safety for executives and guests.
         </div>
         <div class="btn">
-            <a class="bact" href="/Navbar/Services/Booking/GuardBook.html">Book Now</a>
-            <a href="/Navbar/Services/Scout.html">Next-Service</a>
+            <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
+            <a href="../../Services/Scout.html">Next-Service</a>
         </div>
     </div>
 </div>
@@ -127,5 +127,5 @@
 
     </div>
 
-<script type="module" src="/Navbar/Services/Guard-Ser.js"></script></body>
+<script type="module" src="../../Services/Guard-Ser.js"></script></body>
 </html>
