--- a/Navbar/Services/Walkie-Talkie.html
+++ b/Navbar/Services/Walkie-Talkie.html
@@ -5,25 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Walkie-Talkie Communication</title>
 
-    <link rel="stylesheet" href="/Navbar/Services/Guard-Ser.css">
+    <link rel="stylesheet" href="../../Services/Guard-Ser.css">
 
 </head>
 <body>
     <header>
                <nav>
-            <a href="/index.html">Home</a>
-            <a href="/Navbar/Services/Allservices15.html">All Services</a>
-            <a href="/Navbar/Services/Guard-Ser.html">Guard</a>
-            <a href="/Navbar/Services/Boody-G.html" >Close-Prot</a>
-            <a href="/Navbar/Services/Scout.html">Scout</a>
-            <a href="/Navbar/Services/Vehicle.html">Vehicle</a>
-            <a href="/Navbar/Services/Sur-Watch.html">Sur-Watch</a>
-            <a href="/Navbar/Services/CCTV.html">CCTV</a>
-            <a href="/Navbar/Services/Walkie-Talkie.html" class="active">Walkie Talkie</a>
-            <a href="/Navbar/Services/Metal-Detector.html">Metal Detector</a>
-            <a href="/Navbar/Services/Access-Control.html">Access Control Gates</a>
-            <a href="/Navbar/Services/Fire-Safety.html">Fire Safety</a>
-            <a href="/Navbar/Services/GPS-Tracking.html">GPS Track</a>
+          <a href="../../index.html">Home</a>
+            <a href="../Services/Allservices15.html">All Services</a>
+            <a href="../Services/Guard-Ser.html">Guard</a>
+            <a href="../Services/Boody-G.html" >Close-Prot</a>
+            <a href="../Services/EventSecurity.html">Event-Sec</a>
+            <a href="../Services/Scout.html">Scout</a>
+            <a href="../Services/Vehicle.html">Vehicle</a>
+            <a href="../Services/Sur-Watch.html">Sur-Watch</a>
+            <a href="../Services/CCTV.html" >CCTV</a>
+            <a href="../Services/Walkie-Talkie.html"  class="active">Walkie Talkie</a>
+            <a href="../Services/Metal-Detector.html">Metal Detector</a>
+            <a href="../Services/Access-Control.html">Access Control Gates</a>
+            <a href="../Services/Fire-Safety.html">Fire Safety</a>
+            <a href="../Services/GPS-Tracking.html" >GPS Track</a>
         </nav>  
     </header>
 
@@ -32,65 +33,65 @@
 
         <div class="list">
                 <!-- Slide 5 -->
-    <div class="item" style="background-image: url(/Clintsimgs/Radio.jpeg);">
+    <div class="item" style="background-image: url(../../Clintsimgs/Radio.jpeg);">
         <div class="content">
             <div class="title">Emergency Channel</div>
             <div class="name">Priority Alerts</div>
             <div class="des">Dedicated emergency channels for rapid response during critical situations.</div>
             <div class="btn">
-                <a class="bact" href="/Navbar/Services/Booking/GuardBook.html">Book Now</a>
-                <a href="/Navbar/Services/Metal-Detector.html">Next-Service</a>
+                <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
+                <a href="../../Services/Metal-Detector.html">Next-Service</a>
             </div>
         </div>
     </div>
     <!-- Slide 1 -->
-    <div class="item" style="background-image: url(/Clintsimgs/Walkie-Talkies02.jpeg);">
+    <div class="item" style="background-image: url(../../Clintsimgs/Walkie-Talkies02.jpeg);">
         <div class="content">
             <div class="title">Walkie-Talkie Communication</div>
             <div class="name">Instant Connectivity</div>
             <div class="des">Stay connected with your team anytime, anywhere using secure two-way radios.</div>
             <div class="btn">
-                <a class="bact" href="/Navbar/Services/Booking/GuardBook.html">Book Now</a>
-                <a href="/Navbar/Services/Metal-Detector.html">Next-Service</a>
+                <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
+                <a href="../../Services/Metal-Detector.html">Next-Service</a>
             </div>
         </div>
     </div>
 
     <!-- Slide 2 -->
-    <div class="item" style="background-image: url(/Clintsimgs/Walkie-Talkies04.jpeg);">
+    <div class="item" style="background-image: url(../../Clintsimgs/Walkie-Talkies04.jpeg);">
         <div class="content">
             <div class="title">Long-Range Radios</div>
             <div class="name">Wide Coverage</div>
             <div class="des">High-performance radios that ensure seamless communication over long distances.</div>
             <div class="btn">
-                <a class="bact" href="/Navbar/Services/Booking/GuardBook.html">Book Now</a>
-                <a href="/Navbar/Services/Metal-Detector.html">Next-Service</a>
+                <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
+                <a href="../../Services/Metal-Detector.html">Next-Service</a>
             </div>
         </div>
     </div>
 
     <!-- Slide 3 -->
-    <div class="item" style="background-image: url(/Clintsimgs/Walkie-Talkies01.jpeg);">
+    <div class="item" style="background-image: url(../../Clintsimgs/Walkie-Talkies01.jpeg);">
         <div class="content">
             <div class="title">Digital Walkie-Talkies</div>
             <div class="name">Crystal-Clear Audio</div>
             <div class="des">Experience noise-free communication with advanced digital radio technology.</div>
             <div class="btn">
-                <a class="bact" href="/Navbar/Services/Booking/GuardBook.html">Book Now</a>
-                <a href="/Navbar/Services/Metal-Detector.html">Next-Service</a>
+                <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
+                <a href="../../Services/Metal-Detector.html">Next-Service</a>
             </div>
         </div>
     </div>
 
     <!-- Slide 4 -->
-    <div class="item" style="background-image: url(/Clintsimgs/AirPods.jpeg);">
+    <div class="item" style="background-image: url(../../Clintsimgs/AirPods.jpeg);">
         <div class="content">
             <div class="title">Hands-Free Communication</div>
             <div class="name">Effortless Coordination</div>
             <div class="des">Headset-enabled walkie-talkies for smooth, hands-free security operations.</div>
             <div class="btn">
-                <a class="bact" href="/Navbar/Services/Booking/GuardBook.html">Book Now</a>
-                <a href="/Navbar/Services/Metal-Detector.html">Next-Service</a>
+                <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
+                <a href="../../Services/Metal-Detector.html">Next-Service</a>
             </div>
         </div>
     </div>
@@ -112,5 +113,5 @@
 
     </div>
 
-<script type="module" src="/Navbar/Services/Guard-Ser.js"></script></body>
+<script type="module" src="../../Services/Guard-Ser.js"></script></body>
 </html>
