--- a/index.html
+++ b/index.html
@@ -811,7 +811,7 @@
         </div>
       </div>
 
-<!--     
+    
       <script>
   AOS.init({
     duration: 800,
@@ -821,7 +821,7 @@
   });
 </script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<script>AOS.init();</script> -->
+<script>AOS.init();</script> 
 
 <!-- AOS JS -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
