--- a/Navbar/Services/Access-Control.html
+++ b/Navbar/Services/Access-Control.html
@@ -5,25 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Access Control Gates</title>
 
-    <link rel="stylesheet" href="/Navbar/Services/Guard-Ser.css">
+    <link rel="stylesheet" href="../../Services/Guard-Ser.css">
 
 </head>
 <body>
     <header>
              <nav>
-            <a href="/index.html">Home</a>
-            <a href="/Navbar/Services/Allservices15.html">All Services</a>
-            <a href="/Navbar/Services/Guard-Ser.html">Guard</a>
-            <a href="/Navbar/Services/Boody-G.html" >Close-Prot</a>
-            <a href="/Navbar/Services/Scout.html">Scout</a>
-            <a href="/Navbar/Services/Vehicle.html">Vehicle</a>
-            <a href="/Navbar/Services/Sur-Watch.html">Sur-Watch</a>
-            <a href="/Navbar/Services/CCTV.html">CCTV</a>
-            <a href="/Navbar/Services/Walkie-Talkie.html">Walkie Talkie</a>
-            <a href="/Navbar/Services/Metal-Detector.html">Metal Detector</a>
-            <a href="/Navbar/Services/Access-Control.html" class="active">Access Control Gates</a>
-            <a href="/Navbar/Services/Fire-Safety.html">Fire Safety</a>
-            <a href="/Navbar/Services/GPS-Tracking.html">GPS Track</a>
+            <a href="../../index.html">Home</a>
+            <a href="../Services/Allservices15.html">All Services</a>
+            <a href="../Services/Guard-Ser.html">Guard</a>
+            <a href="../Services/Boody-G.html" >Close-Prot</a>
+            <a href="../Services/EventSecurity.html">Event-Sec</a>
+            <a href="../Services/Scout.html">Scout</a>
+            <a href="../Services/Vehicle.html">Vehicle</a>
+            <a href="../Services/Sur-Watch.html">Sur-Watch</a>
+            <a href="../Services/CCTV.html" >CCTV</a>
+            <a href="../Services/Walkie-Talkie.html">Walkie Talkie</a>
+            <a href="../Services/Metal-Detector.html">Metal Detector</a>
+            <a href="../Services/Access-Control.html"  class="active">Access Control Gates</a>
+            <a href="../Services/Fire-Safety.html">Fire Safety</a>
+            <a href="../Services/GPS-Tracking.html" >GPS Track</a>
         </nav>  
     </header>
 
@@ -34,53 +35,53 @@
             
 
     <!-- Slide 4 -->
-    <div class="item" style="background-image: url(/Clintsimgs/Automated-Turnstiles.jpeg);">
+    <div class="item" style="background-image: url(../../Clintsimgs/Automated-Turnstiles.jpeg);">
         <div class="content">
             <div class="title">Automated Turnstiles</div>
             <div class="name">Efficient Crowd Management</div>
             <div class="des">Control large crowds and ensure smooth entry operations with fully automated turnstile gates.</div>
             <div class="btn">
-                <a class="bact" href="/Navbar/Services/Booking/GuardBook.html">Book Now</a>
-                <a href="/Navbar/Services/Fire-Safety.html">Next-Service</a>
+                <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
+                <a href="../../Services/Fire-Safety.html">Next-Service</a>
             </div>
         </div>
     </div>
 
    <!-- Slide 1 -->
-    <div class="item" style="background-image: url(/Clintsimgs/Access-Control-Gate.png);">
+    <div class="item" style="background-image: url(../../Clintsimgs/Access-Control-Gate.png);">
         <div class="content">
             <div class="title">Access Control Gate</div>
             <div class="name">Advanced Entry Security</div>
             <div class="des">Ensure secure and seamless entry management with our high-tech access control gates.</div>
             <div class="btn">
-                <a class="bact" href="/Navbar/Services/Booking/GuardBook.html">Book Now</a>
-                <a href="/Navbar/Services/Fire-Safety.html">Next-Service</a>
+                <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
+                <a href="../../Services/Fire-Safety.html">Next-Service</a>
             </div>
         </div>
     </div>
 
     <!-- Slide 2 -->
-    <div class="item" style="background-image: url(/Clintsimgs/BiometricAuthentication.jpeg);">
+    <div class="item" style="background-image: url(../../Clintsimgs/BiometricAuthentication.jpeg);">
         <div class="content">
             <div class="title">Biometric Authentication</div>
             <div class="name">Fingerprint & Face Recognition</div>
             <div class="des">State-of-the-art biometric systems for maximum security at restricted access points.</div>
             <div class="btn">
-                <a class="bact" href="/Navbar/Services/Booking/GuardBook.html">Book Now</a>
-                <a href="/Navbar/Services/Fire-Safety.html">Next-Service</a>
+                <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
+                <a href="../../Services/Fire-Safety.html">Next-Service</a>
             </div>
         </div>
     </div>
 
     <!-- Slide 3 -->
-    <div class="item" style="background-image: url(/Clintsimgs/AccessControl.jpeg);">
+    <div class="item" style="background-image: url(../../Clintsimgs/AccessControl.jpeg);">
         <div class="content">
             <div class="title">RFID & Smart Cards</div>
             <div class="name">Touchless Entry Control</div>
             <div class="des">Fast and reliable smart card & RFID technology for modern corporate security setups.</div>
             <div class="btn">
-                <a class="bact" href="/Navbar/Services/Booking/GuardBook.html">Book Now</a>
-                <a href="/Navbar/Services/Fire-Safety.html">Next-Service</a>
+                <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
+                <a href="../../Services/Fire-Safety.html">Next-Service</a>
             </div>
         </div>
     </div>
@@ -100,5 +101,5 @@
 
     </div>
 
-<script type="module" src="/Navbar/Services/Guard-Ser.js"></script></body>
+<script type="module" src="../../Services/Guard-Ser.js"></script></body>
 </html>
