--- a/Navbar/Services/Fire-Safety.html
+++ b/Navbar/Services/Fire-Safety.html
@@ -5,25 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fire Alarm & Safety Systems</title>
 
-    <link rel="stylesheet" href="/Navbar/Services/Guard-Ser.css">
+    <link rel="stylesheet" href="../../Services/Guard-Ser.css">
 
 </head>
 <body>
     <header>
         <nav>
-            <a href="/index.html">Home</a>
-            <a href="/Navbar/Services/Allservices15.html">All Services</a>
-            <a href="/Navbar/Services/Guard-Ser.html">Guard</a>
-            <a href="/Navbar/Services/Boody-G.html" >Close-Prot</a>
-            <a href="/Navbar/Services/Scout.html">Scout</a>
-           <a href="/Navbar/Services/Vehicle.html">Vehicle</a>
-            <a href="/Navbar/Services/Vehicle.html">Sur-Watch</a>
-            <a href="/Navbar/Services/Vehicle.html">CCTV</a>
-            <a href="/Navbar/Services/Vehicle.html">Walkie Talkie</a>
-            <a href="/Navbar/Services/Vehicle.html">Metal Detector</a>
-            <a href="/Navbar/Services/Vehicle.html">Access Control Gates</a>
-            <a href="/Navbar/Services/Vehicle.html" class="active">Fire Safety</a>
-            <a href="/Navbar/Services/Vehicle.html">GPS Track</a>
+            <a href="../../index.html">Home</a>
+            <a href="../Services/Allservices15.html">All Services</a>
+            <a href="../Services/Guard-Ser.html">Guard</a>
+            <a href="../Services/Boody-G.html" >Close-Prot</a>
+            <a href="../Services/EventSecurity.html">Event-Sec</a>
+            <a href="../Services/Scout.html">Scout</a>
+            <a href="../Services/Vehicle.html">Vehicle</a>
+            <a href="../Services/Sur-Watch.html">Sur-Watch</a>
+            <a href="../Services/CCTV.html" >CCTV</a>
+            <a href="../Services/Walkie-Talkie.html">Walkie Talkie</a>
+            <a href="../Services/Metal-Detector.html">Metal Detector</a>
+            <a href="../Services/Access-Control.html">Access Control Gates</a>
+            <a href="../Services/Fire-Safety.html" class="active">Fire Safety</a>
+            <a href="../Services/GPS-Tracking.html" >GPS Track</a>
         </nav>  
     </header>
 
@@ -33,53 +34,53 @@
         <div class="list">
 
         <!-- Slide 1 -->
-    <div class="item" style="background-image: url(/Clintsimgs/Fire05.jpeg);">
+    <div class="item" style="background-image: url(../../Clintsimgs/Fire05.jpeg);">
         <div class="content">
             <div class="title">Fire Safety</div>
             <div class="name">Complete Fire Protection</div>
             <div class="des">Advanced fire detection, suppression, and prevention solutions to ensure safety and minimize risks.</div>
             <div class="btn">
-                <a class="bact" href="/Navbar/Services/Booking/FireBook.html">Book Now</a>
-                <a href="/Navbar/Services/GPS-Tracking.html">Next-Service</a>
+                <a class="bact" href="../../Services/Booking/FireBook.html">Book Now</a>
+                <a href="../../Services/GPS-Tracking.html">Next-Service</a>
             </div>
         </div>
     </div>
 
     <!-- Slide 2 -->
-    <div class="item" style="background-image: url(/Clintsimgs/FireAlarmSystems.jpeg);">
+    <div class="item" style="background-image: url(../../Clintsimgs/FireAlarmSystems.jpeg);">
         <div class="content">
             <div class="title">Fire Alarm Systems</div>
             <div class="name">Instant Threat Detection</div>
             <div class="des">High-quality fire alarm systems with real-time alerts to safeguard lives and property effectively.</div>
             <div class="btn">
-                <a class="bact" href="/Navbar/Services/Booking/FireBook.html">Book Now</a>
-                <a href="/Navbar/Services/GPS-Tracking.html">Next-Service</a>
+                <a class="bact" href="../../Services/Booking/FireBook.html">Book Now</a>
+                <a href="../../Services/GPS-Tracking.html">Next-Service</a>
             </div>
         </div>
     </div>
 
     <!-- Slide 3 -->
-    <div class="item" style="background-image: url(/Clintsimgs/Fire03.jpeg);">
+    <div class="item" style="background-image: url(../../Clintsimgs/Fire03.jpeg);">
         <div class="content">
             <div class="title">Fire Extinguishers</div>
             <div class="name">Quick Emergency Response</div>
             <div class="des">High-performance extinguishers designed to tackle different fire types with fast and effective action.</div>
             <div class="btn">
-                <a class="bact" href="/Navbar/Services/Booking/FireBook.html">Book Now</a>
-                <a href="/Navbar/Services/GPS-Tracking.html">Next-Service</a>
+                <a class="bact" href="../../Services/Booking/FireBook.html">Book Now</a>
+                <a href="../../Services/GPS-Tracking.html">Next-Service</a>
             </div>
         </div>
     </div>
 
     <!-- Slide 4 -->
-    <div class="item" style="background-image: url(/Clintsimgs/Fire04.jpeg);">
+    <div class="item" style="background-image: url(../../Clintsimgs/Fire04.jpeg);">
         <div class="content">
             <div class="title">Sprinkler Systems</div>
             <div class="name">Automated Fire Control</div>
             <div class="des">Automatic sprinkler systems for immediate response to fire emergencies, reducing damage effectively.</div>
             <div class="btn">
-                <a class="bact" href="/Navbar/Services/Booking/FireBook.html">Book Now</a>
-                <a href="/Navbar/Services/GPS-Tracking.html">Next-Service</a>
+                <a class="bact" href="../../Services/Booking/FireBook.html">Book Now</a>
+                <a href="../../Services/GPS-Tracking.html">Next-Service</a>
             </div>
         </div>
     </div>
@@ -98,5 +99,5 @@
 
     </div>
 
-<script type="module" src="/Navbar/Services/Guard-Ser.js"></script></body>
+<script type="module" src="../../Services/Guard-Ser.js"></script></body>
 </html>
