--- a/Navbar/Services/Guard-Ser.html
+++ b/Navbar/Services/Guard-Ser.html
@@ -5,26 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guard-Service</title>
 
-    <link rel="stylesheet" href="/Navbar/Services/Guard-Ser.css">
+    <link rel="stylesheet" href="../../Services/Guard-Ser.css">
 
 </head>
 <body>
     <header>
         <nav>
-            <a href="/index.html">Home</a>
-            <a href="/Navbar/Services/Allservices15.html">All Services</a>
-            <a href="/Navbar/Services/Guard-Ser.html"class="active">Guard</a>
-            <a href="/Navbar/Services/Boody-G.html" >Close-Prot</a>
-            <a href="/Navbar/Services/EventSecurity.html">Event-Sec</a>
-            <a href="/Navbar/Services/Scout.html">Scout</a>
-           <a href="/Navbar/Services/Vehicle.html">Vehicle</a>
-            <a href="/Navbar/Services/Vehicle.html">Sur-Watch</a>
-            <a href="/Navbar/Services/Vehicle.html">CCTV</a>
-            <a href="/Navbar/Services/Vehicle.html">Walkie Talkie</a>
-            <a href="/Navbar/Services/Vehicle.html">Metal Detector</a>
-            <a href="/Navbar/Services/Vehicle.html">Access Control Gates</a>
-            <a href="/Navbar/Services/Vehicle.html">Fire Safety</a>
-            <a href="/Navbar/Services/Vehicle.html">GPS Track</a>
+             <a href="../../index.html">Home</a>
+            <a href="../Services/Allservices15.html">All Services</a>
+            <a href="../Services/Guard-Ser.html" class="active">Guard</a>
+            <a href="../Services/Boody-G.html" >Close-Prot</a>
+            <a href="../Services/EventSecurity.html">Event-Sec</a>
+            <a href="../Services/Scout.html">Scout</a>
+            <a href="../Services/Vehicle.html">Vehicle</a>
+            <a href="../Services/Sur-Watch.html">Sur-Watch</a>
+            <a href="../Services/CCTV.html">CCTV</a>
+            <a href="../Services/Walkie-Talkie.html">Walkie Talkie</a>
+            <a href="../Services/Metal-Detector.html">Metal Detector</a>
+            <a href="../Services/Access-Control.html">Access Control Gates</a>
+            <a href="../Services/Fire-Safety.html">Fire Safety</a>
+            <a href="../Services/GPS-Tracking.html" >GPS Track</a>
         </nav>  
     </header>
 
@@ -33,65 +33,65 @@
 
         <div class="list">
                 <!-- Slide 5 -->
-    <div class="item" style="background-image: url(/Clintsimgs/Supervisor.jpeg);">
+    <div class="item" style="background-image: url(../../clint/Supervisor.jpeg);">
         <div class="content">
             <div class="title">Security Supervisors</div>
             <div class="name">Smart Monitoring</div>
             <div class="des">Dedicated supervisors managing teams to ensure smooth security operations.</div>
             <div class="btn">
-                <a class="bact" href="/Navbar/Services/Booking/GuardBook.html">Book Now</a>
-                <a href="/Navbar/Services/Boody-G.html">Next-Service</a>
+                <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
+                <a href="../../Services/Boody-G.html">Next-Service</a>
             </div>
         </div>
     </div>
        <!-- Slide 1 -->
-    <div class="item" style="background-image: url(/Cimg/HomeGuard.png);">
+    <div class="item" style="background-image: url(../../Cimg/HomeGuard.png);">
         <div class="content">
             <div class="title">Security Guard</div>
             <div class="name">Professional Protection</div>
             <div class="des">Highly trained guards ensuring safety and security at all times.</div>
             <div class="btn">
-                <a class="bact" href="/Navbar/Services/Booking/GuardBook.html">Book Now</a>
-                <a href="/Navbar/Services/Boody-G.html">Next-Service</a>
+                <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
+                <a href="../../Services/Boody-G.html">Next-Service</a>
             </div>
         </div>
     </div>
 
     <!-- Slide 2 -->
-    <div class="item" style="background-image: url(/Clintsimgs/Ex-Armed-Forces.jpeg);">
+    <div class="item" style="background-image: url(../../Ex-Armed-Forces.jpeg);">
         <div class="content">
             <div class="title">Ex-Armed Forces</div>
             <div class="name">Elite Trained Guards</div>
             <div class="des">Experienced ex-military personnel delivering unmatched security expertise.</div>
             <div class="btn">
-                <a class="bact" href="/Navbar/Services/Booking/GuardBook.html">Book Now</a>
-                <a href="/Navbar/Services/Boody-G.html">Next-Service</a>
+                <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
+                <a href="../../Services/Boody-G.html">Next-Service</a>
             </div>
         </div>
     </div>
 
     <!-- Slide 3 -->
-    <div class="item" style="background-image: url(/Clintsimgs/SSG.jpeg);">
+    <div class="item" style="background-image: url(../../Clintsimgs/SSG.jpeg);">
         <div class="content">
             <div class="title">SSG Commandos</div>
             <div class="name">High-Risk Security</div>
             <div class="des">Elite SSG-trained commandos specialized in critical protection missions.</div>
             <div class="btn">
-                <a class="bact" href="/Navbar/Services/Booking/GuardBook.html">Book Now</a>
-                <a href="/Navbar/Services/Boody-G.html">Next-Service</a>
+                <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
+                <a href="../../Services/Boody-G.html">Next-Service</a>
             </div>
         </div>
     </div>
 
     <!-- Slide 4 -->
-    <div class="item" style="background-image: url(/Clintsimgs/SSW.jpeg);">
+    <div class="item" style="background-image: url(../../Clintsimgs../SSW.jpeg);">
         <div class="content">
             <div class="title">SSW Guards</div>
             <div class="name">Advanced Tactical Team</div>
             <div class="des">Highly disciplined SSW professionals for sensitive & high-profile locations.</div>
             <div class="btn">
-                <a class="bact" href="/Navbar/Services/Booking/GuardBook.html">Book Now</a>
-                <a href="/Navbar/Services/Boody-G.html">Next-Service</a>
+                <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
+                <a href="../../Services/Boody-G.html">Next-Service</a>
             </div>
         </div>
     </div>
@@ -114,5 +114,5 @@
 
     </div>
 
-<script type="module" src="/Navbar/Services/Guard-Ser.js"></script></body>
+<script type="module" src="../../Services/Guard-Ser.js"></script></body>
 </html>
