--- a/Navbar/Services/Metal-Detector.html
+++ b/Navbar/Services/Metal-Detector.html
@@ -5,25 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Metal Detector Screening</title>
 
-    <link rel="stylesheet" href="/Navbar/Services/Guard-Ser.css">
+    <link rel="stylesheet" href="../../Services/Guard-Ser.css">
 
 </head>
 <body>
     <header>
         <nav>
-            <a href="/index.html">Home</a>
-            <a href="/Navbar/Services/Allservices15.html">All Services</a>
-            <a href="/Navbar/Services/Guard-Ser.html">Guard</a>
-            <a href="/Navbar/Services/Boody-G.html" >Close-Prot</a>
-            <a href="/Navbar/Services/Scout.html">Scout</a>
-            <a href="/Navbar/Services/Vehicle.html">Vehicle</a>
-            <a href="/Navbar/Services/Sur-Watch.html">Sur-Watch</a>
-            <a href="/Navbar/Services/CCTV.html">CCTV</a>
-            <a href="/Navbar/Services/Walkie-Talkie.html">Walkie Talkie</a>
-            <a href="/Navbar/Services/Metal-Detector.html" class="active">Metal Detector</a>
-            <a href="/Navbar/Services/Access-Control.html">Access Control Gates</a>
-            <a href="/Navbar/Services/Fire-Safety.html">Fire Safety</a>
-            <a href="/Navbar/Services/GPS-Tracking.html">GPS Track</a>
+            <a href="../../index.html">Home</a>
+            <a href="../Services/Allservices15.html">All Services</a>
+            <a href="../Services/Guard-Ser.html">Guard</a>
+            <a href="../Services/Boody-G.html" >Close-Prot</a>
+            <a href="../Services/EventSecurity.html">Event-Sec</a>
+            <a href="../Services/Scout.html">Scout</a>
+            <a href="../Services/Vehicle.html">Vehicle</a>
+            <a href="../Services/Sur-Watch.html">Sur-Watch</a>
+            <a href="../Services/CCTV.html" >CCTV</a>
+            <a href="../Services/Walkie-Talkie.html">Walkie Talkie</a>
+            <a href="../Services/Metal-Detector.html" class="active">Metal Detector</a>
+            <a href="../Services/Access-Control.html">Access Control Gates</a>
+            <a href="../Services/Fire-Safety.html">Fire Safety</a>
+            <a href="../Services/GPS-Tracking.html" >GPS Track</a>
         </nav>  
     </header>
 
@@ -32,52 +33,52 @@
 
         <div class="list">
                 <!-- Slide 5 -->
-    <div class="item" style="background-image: url(/Clintsimgs/AI.png.jpg);">
+    <div class="item" style="background-image: url(../../Clintsimgs/AI.png.jpg);">
         <div class="content">
             <div class="title">High-Security Integration</div>
             <div class="name">Seamless Security Setup</div>
             <div class="des">Lightweight and accurate devices for quick manual inspection at sensitive checkpoints.</div>
             <div class="btn">
-                <a class="bact" href="/Navbar/Services/Booking/GuardBook.html">Book Now</a>
-                <a href="/Navbar/Services/Access-Control.html">Next-Service</a>
+                <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
+                <a href="../../Services/Access-Control.html">Next-Service</a>
             </div>
         </div>
     </div>
     <!-- Slide 1 -->
-    <div class="item" style="background-image: url(/Clintsimgs/MetalDetectorDevices.jpeg);">
+    <div class="item" style="background-image: url(../../Clintsimgs/MetalDetectorDevices.jpeg);">
         <div class="content">
             <div class="title">Metal Detector</div>
             <div class="name">Compact & Portable</div>
             <div class="des">High-sensitivity detectors designed to identify concealed metallic objects instantly.</div>
             <div class="btn">
-                <a class="bact" href="/Navbar/Services/Booking/GuardBook.html">Book Now</a>
-                <a href="/Navbar/Services/Access-Control.html">Next-Service</a>
+                <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
+                <a href="../../Services/Access-Control.html">Next-Service</a>
             </div>
         </div>
     </div>
 
     <!-- Slide 2 -->
-    <div class="item" style="background-image: url(/Clintsimgs/Walk-ThroughScanners.jpeg);">
+    <div class="item" style="background-image: url(../../Clintsimgs/Walk-ThroughScanners.jpeg);">
         <div class="content">
             <div class="title">Walk-Through Scanners</div>
             <div class="name">Quick & Efficient Screening</div>
             <div class="des">Ideal for events, offices, and entry points to ensure complete safety control.</div>
             <div class="btn">
-                <a class="bact" href="/Navbar/Services/Booking/GuardBook.html">Book Now</a>
-                <a href="/Navbar/Services/Access-Control.html">Next-Service</a>
+                <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
+                <a href="../../Services/Access-Control.html">Next-Service</a>
             </div>
         </div>
     </div>
 
     <!-- Slide 4 -->
-    <div class="item" style="background-image: url(/Clintsimgs/MetalDetectorDevices.jpeg);">
+    <div class="item" style="background-image: url(../../Clintsimgs/MetalDetectorDevices.jpeg);">
         <div class="content">
             <div class="title">Multi-Zone Detection</div>
             <div class="name">Precise Threat Identification</div>
             <div class="des">Accurately identifies the location of metallic objects for faster screening results.</div>
             <div class="btn">
-                <a class="bact" href="/Navbar/Services/Booking/GuardBook.html">Book Now</a>
-                <a href="/Navbar/Services/Access-Control.html">Next-Service</a>
+                <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
+                <a href="../../Services/Access-Control.html">Next-Service</a>
             </div>
         </div>
     </div>
@@ -99,5 +100,5 @@
 
     </div>
 
-<script type="module" src="/Navbar/Services/Guard-Ser.js"></script></body>
+<script type="module" src="../../Services/Guard-Ser.js"></script></body>
 </html>
