--- a/Navbar/Services/Scout.html
+++ b/Navbar/Services/Scout.html
@@ -5,26 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scout-Service</title>
 
-    <link rel="stylesheet" href="/Navbar/Services/Guard-Ser.css">
+    <link rel="stylesheet" href="../../Services/Guard-Ser.css">
 
 </head>
 <body>
     <header>
         <nav>
-            <a href="/index.html">Home</a>
-            <a href="/Navbar/Services/Allservices15.html">All Services</a>
-            <a href="/Navbar/Services/Guard-Ser.html">Guard</a>
-            <a href="/Navbar/Services/Boody-G.html" >Close-Prot</a>
-            <a href="/Navbar/Services/EventSecurity.html">Event-Sec</a>
-            <a href="/Navbar/Services/Scout.html" class="active">Scout</a>
-            <a href="/Navbar/Services/Vehicle.html">Vehicle</a>
-            <a href="/Navbar/Services/Sur-Watch.html">Sur-Watch</a>
-            <a href="/Navbar/Services/CCTV.html">CCTV</a>
-            <a href="/Navbar/Services/Walkie-Talkie.html">Walkie Talkie</a>
-            <a href="/Navbar/Services/Metal-Detector.html">Metal Detector</a>
-            <a href="/Navbar/Services/Access-Control.html">Access Control Gates</a>
-            <a href="/Navbar/Services/Fire-Safety.html">Fire Safety</a>
-            <a href="/Navbar/Services/GPS-Tracking.html">GPS Track</a>
+            <a href="../../index.html">Home</a>
+            <a href="../Services/Allservices15.html">All Services</a>
+            <a href="../Services/Guard-Ser.html">Guard</a>
+            <a href="../Services/Boody-G.html" >Close-Prot</a>
+            <a href="../Services/EventSecurity.html">Event-Sec</a>
+            <a href="../Services/Scout.html" class="active">Scout</a>
+            <a href="../Services/Vehicle.html">Vehicle</a>
+            <a href="../Services/Sur-Watch.html">Sur-Watch</a>
+            <a href="../Services/CCTV.html">CCTV</a>
+            <a href="../Services/Walkie-Talkie.html">Walkie Talkie</a>
+            <a href="../Services/Metal-Detector.html">Metal Detector</a>
+            <a href="../Services/Access-Control.html">Access Control Gates</a>
+            <a href="../Services/Fire-Safety.html">Fire Safety</a>
+            <a href="../Services/GPS-Tracking.html" >GPS Track</a>
         </nav>  
     </header>
 
@@ -34,79 +34,79 @@
         <div class="list">
 
             <!-- Slide 6 -->
-<div class="item" style="background-image: url(/Cimg/scout01.png);">
+<div class="item" style="background-image: url(../../Cimg/scout01.png);">
   <div class="content">
     <div class="title">Scout</div>
     <div class="name">Perimeter Watch</div>
     <div class="des">Maintaining constant observation to secure boundaries and access points.</div>
     <div class="btn">
-      <a class="bact" href="/Navbar/Services/Booking/GuardBook.html">Book Now</a>
-      <a href="/Navbar/Services/Vehicle.html">Next-Service</a>
+      <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
+      <a href="../../Services/Vehicle.html">Next-Service</a>
     </div>
   </div>
 </div>
 
         <!-- Slide 1 -->
-<div class="item" style="background-image: url(/Clintsimgs/Scout.jpeg);">
+<div class="item" style="background-image: url(../../Clintsimgs/Scout.jpeg);">
   <div class="content">
     <div class="title">Scout</div>
     <div class="name">Recon Patrol</div>
     <div class="des">Early detection of threats through strategic area patrols and surveillance.</div>
     <div class="btn">
-      <a class="bact" href="/Navbar/Services/Booking/GuardBook.html">Book Now</a>
-      <a href="/Navbar/Services/Vehicle.html">Next-Service</a>
+      <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
+      <a href="../../Services/Vehicle.html">Next-Service</a>
     </div>
   </div>
 </div>
 
 <!-- Slide 2 -->
-<div class="item" style="background-image: url(/Cimg/scout01.png);">
+<div class="item" style="background-image: url(../../Cimg/scout01.png);">
   <div class="content">
     <div class="title">Scout</div>
     <div class="name">Risk Mapping</div>
     <div class="des">Charting security vulnerabilities for effective protection planning.</div>
     <div class="btn">
-      <a class="bact" href="/Navbar/Services/Booking/GuardBook.html">Book Now</a>
-      <a href="/Navbar/Services/Vehicle.html">Next-Service</a>
+      <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
+      <a href="../../Services/Vehicle.html">Next-Service</a>
     </div>
   </div>
 </div>
 
 <!-- Slide 3 -->
-<div class="item" style="background-image: url(/Cimg/scout01.png);">
+<div class="item" style="background-image: url(../../Cimg/scout01.png);">
   <div class="content">
     <div class="title">Scout</div>
     <div class="name">Covert Surveillance</div>
     <div class="des">Monitoring without detection to gather critical intelligence on potential threats.</div>
     <div class="btn">
-      <a class="bact" href="/Navbar/Services/Booking/GuardBook.html">Book Now</a>
-      <a href="/Navbar/Services/Vehicle.html">Next-Service</a>
+      <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
+      <a href="../../Services/Vehicle.html">Next-Service</a>
     </div>
   </div>
 </div>
 
 <!-- Slide 4 -->
-<div class="item" style="background-image: url(/Cimg/scout01.png);">
+<div class="item" style="background-image: url(../../Cimg/scout01.png);">
   <div class="content">
     <div class="title">Scout</div>
     <div class="name">Advance Security</div>
     <div class="des">Securing a location before the arrival of VIPs or sensitive equipment.</div>
     <div class="btn">
-      <a class="bact" href="/Navbar/Services/Booking/GuardBook.html">Book Now</a>
-      <a href="/Navbar/Services/Vehicle.html">Next-Service</a>
+      <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
+      <a href="../../Services/Vehicle.html">Next-Service</a>
     </div>
   </div>
 </div>
 
 <!-- Slide 5 -->
-<div class="item" style="background-image: url(/Cimg/scout01.png);">
+<div class="item" style="background-image: url(../../Cimg/scout01.png);">
   <div class="content">
     <div class="title">Scout</div>
     <div class="name">Event Security Prep</div>
     <div class="des">Ensuring every detail of an event venue is secure before guests arrive.</div>
     <div class="btn">
-      <a class="bact" href="/Navbar/Services/Booking/GuardBook.html">Book Now</a>
-      <a href="/Navbar/Services/Vehicle.html">Next-Service</a>
+      <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
+      <a href="../../Services/Vehicle.html">Next-Service</a>
     </div>
   </div>
 </div>
@@ -129,5 +129,5 @@
 
     </div>
 
-<script type="module" src="/Navbar/Services/Guard-Ser.js"></script></body>
+<script type="module" src="../../Services/Guard-Ser.js"></script></body>
 </html>
